--- a/style/style.css
+++ b/style/style.css
@@ -1,10 +1,42 @@
 body {
     display: flex;
     flex-direction: column;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family:'Roboto';
     padding:0;
     margin:0;
-}   
+}
+
+@font-face {
+    font-family:'Roboto';
+    src:url(../fonts/Roboto-Regular.ttf) format(truetype);
+    font-weight:normal;
+    font-style:normal;
+
+}
+
+@font-face {
+    font-family:'Roboto';
+    src:url(../fonts/Roboto-Bold.ttf) format(truetype);
+    font-weight:bold;
+    font-style:normal;
+
+}
+
+@font-face {
+    font-family:'Roboto';
+    src:url(../fonts/Roboto-Black.ttf) format(truetype);
+    font-weight:900;
+    font-style:normal;
+
+}
+
+@font-face {
+    font-family:'Roboto';
+    src:url(../fonts/Roboto-LightItalic.ttf) format(truetype);
+    font-weight:light;
+    font-style:italic;
+
+}
 
 header {
     display:flex;
@@ -20,7 +52,8 @@ header {
     margin-right:auto;
     margin-left:0;
     font-size:24px;
-    font-weight:bold;
+    font-weight:900;
+    font-style:normal;
 }
 
 .header.link {
@@ -44,6 +77,7 @@ header {
     font-size:48px;
     color:#f9faf8;
     font-weight:900;
+    margin-bottom:0;
 }
 
 .hero.pic {
@@ -55,4 +89,150 @@ header {
 .content p {
     font-size:18px;
     color:#e5e7eb;
+    margin:0;
 }
+
+.content button {
+    background-color:#3882f6;
+    border-radius:6px;
+    border:none;
+    padding-left:24px;
+    padding-right:24px;
+    padding-top:8px;
+    padding-bottom:8px;
+    margin-top:8px;
+    text-decoration:none;
+    text-align: center;
+}
+
+button a {
+    font-size:18px;
+    color:#f9faf8;
+    font-weight:900;
+}
+
+.cards {
+    display:flex;
+    justify-content: center;
+    gap:64px;
+   
+}
+
+.info {
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin:0;
+    padding-top:32px;
+    padding-bottom:64px;
+}
+
+.info h1 {
+    font-size: 36px;
+    color:#1f2937;
+    font-weight: 900;
+}
+
+.card {
+    box-sizing: border-box;
+    height:160px;
+    width:160px;
+    border:4px solid #3882f6;
+    border-radius:10px;
+    padding:80px;
+    margin:0;
+}
+
+.cardbox {
+    display:flex;
+    flex-direction: column;
+    text-align: center;
+    width:160px;
+}
+
+.cardbox p {
+    font-size:18px;
+    color:#1f2937;
+}
+
+.quote {
+    display:flex;
+    flex-direction: column;
+    background-color:#e5e7eb;
+    padding-top:120px;
+    padding-bottom:120px;
+    gap:0;
+
+}
+
+.line {
+    font-size:36px;
+    color:#1f2937;
+    font-weight:light;
+    font-style:italic;
+    width:880px;
+    align-self: center;
+    margin:0;
+
+}
+
+.thor {
+    font-size:24px;
+    font-weight:bold;
+    width:880px;
+    align-self: flex-end;
+    margin:0;
+}
+
+.cta {
+    padding-top:120px;
+    padding-bottom:120px;
+    padding-left:240px;
+    padding-right:240px;
+}
+
+.ctacard {
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color:#3882f6;
+    border-radius:8px;
+    padding-top:60px;
+    padding-bottom:60px;
+    padding-left:120px;
+    padding-right:120px;
+}
+
+.ctacard button {
+
+    background-color:#3882f6;
+    border-radius:6px;
+    border:2px solid #f9faf8;
+    padding-left:24px;
+    padding-right:24px;
+    padding-top:8px;
+    padding-bottom:8px;
+}
+
+.ctatext h1 {
+    color:#f9faf8;
+    margin-bottom:4px;
+    padding-bottom:0;
+}
+
+.ctatext p {
+    font-size:18px;
+    color:#e5e7eb;
+    margin-top:4px;
+    padding-top:0;
+}
+
+footer {
+    background-color:#1f2937;
+    color:#e5e7eb;
+    font-size:18px;
+    text-align:center;
+    padding:64px;
+}
+
